--- a/css/style.css
+++ b/css/style.css
@@ -377,18 +377,20 @@ line-height: 30px;
 .about-img {
     position: relative;
 }
+.about-img img {
+    width: 100%;
+}
 
 .about-img:before {
     position: absolute;
-    height: 305px;
+    height: 270px;
     width: 12px;
     content: "";
     background: #8ec448;
-    right: 9%;
+    right: 13%;
     transform: rotate(26deg);
     top: 11%;
 }
-
 
 /*skill*/
 .pt-50{
@@ -449,10 +451,14 @@ line-height: 30px;
     width: 100%;
 	height: auto;
 }
+.single-team {
+    position: relative;
+    margin-bottom: 30px;
+}
 .team-content {
     position: absolute;
     bottom: 0;
-    width: 92%;
+    width: 100%;
     height: 30%;
     transition: .5s;
 }
@@ -760,4 +766,133 @@ line-height: 30px;
     width: 40px;
     border-left: 0;
     margin-left: -5px;
+}
+
+/*footer*/
+
+
+/* XL Device :1200px. */
+@media (min-width: 1200px) and (max-width: 1500px) {
+
+
+}
+
+/* LG Device :992px. */
+@media (min-width: 992px) and (max-width: 1200px) {
+
+.menu ul li a {
+    padding: 40px 10px;
+}
+.about-img:before {
+    height: 235px;
+    width: 10px;
+    right: 14%;
+}
+}
+
+ 
+/* MD Device :768px. */
+@media (min-width: 768px) and (max-width: 991px) {
+.our-skill {
+    overflow: hidden;
+}
+.about-img {
+    margin-bottom: 40px;
+}
+.about-img:before {
+    height: 347px;
+    width: 11px;
+    right: 14%;
+}
+
+}
+
+ 
+/* Extra small Device. */
+@media (max-width: 575px) {
+.about-img {
+    margin-bottom: 30px;
+}
+
+.skill-img {
+    overflow: hidden;
+}
+.about-img:before {
+    position: absolute;
+    height: 223px;
+    width: 9px;
+    content: "";
+    background: #8ec448;
+    right: 13%;
+    transform: rotate(26deg);
+    top: 11%;
+}
+header {
+    position: static;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+.about-img:before {
+    position: absolute;
+    height: 223px;
+    width: 9px;
+    content: "";
+    background: #8ec448;
+    right: 12%;
+    transform: rotate(26deg);
+    top: 11%;
+}
+ 
+}
+ 
+/* SM Small Device :550px. */
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+.about-img:before {
+    height: 257px;
+    width: 8px;
+    right: 14%;
+
+}
+.about-img {
+    margin-bottom: 30px;
+}
+.skill-img {
+    overflow: hidden;
+}
+.about-img:before {
+    position: absolute;
+    height: 223px;
+    width: 9px;
+    content: "";
+    background: #8ec448;
+    right: 13%;
+    transform: rotate(26deg);
+    top: 11%;
+}
+
+}
+
+
+/* retina query */
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (max-width:991.98px),only screen and (min--moz-device-pixel-ratio:2) and (max-width:991.98px),only screen and (-o-min-device-pixel-ratio:2/1) and (max-width:991.98px),only screen and (min-device-pixel-ratio:2) and (max-width:991.98px),only screen and (min-resolution:192dpi) and (max-width:991.98px),only screen and (min-resolution:2dppx) and (max-width:991.98px){
+
+.logo .standard-logo{
+  display: none;
+}
+.logo .retina-logo{
+  display: inline-block;
+}
+
+}
+
+
+@media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min--moz-device-pixel-ratio:2),only screen and (-o-min-device-pixel-ratio:2/1),only screen and (min-device-pixel-ratio:2),only screen and (min-resolution:192dpi),only screen and (min-resolution:2dppx){
+.logo .standard-logo{
+  display: none;
+}
+.logo .retina-logo{
+  display: inline-block;
+}
+
 }
